# ImageProcessing2023

./: .gitignore  CMakeLists.txt  README.md  blkproc.cpp  blkproc2.cpp  color.cpp  filter-basic.cpp  filter2Ddemo.cpp  makeborder.cpp  qtables.hpp  test.cpp  tools.hpp
data/: barbara.pgm  p0_01.pgm
